--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </form>
 
 
-    <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script> -->
+    <script src="./scripts/NLWSetup.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 </html>
